--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -2,32 +2,37 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#2FAD40"
-    tools:context=".MainActivity">
+    android:background="@drawable/login" >
 
-    <ImageView
-        android:id="@+id/logoFlores"
-        android:layout_width="273dp"
-        android:layout_height="495dp"
+    <Button
+        android:id="@+id/btn_registro"
+        android:layout_width="208dp"
+        android:layout_height="50dp"
+        android:backgroundTint="#2FAD40"
+        android:fontFamily="@font/chewy"
+        android:text="Entrar"
+        android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.418"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.194"
-        app:srcCompat="@drawable/logo" />
+        app:layout_constraintVertical_bias="0.668" />
 
-    <ImageView
-        android:id="@+id/logo"
-        android:layout_width="335dp"
-        android:layout_height="477dp"
+    <Button
+        android:id="@+id/btn_registro"
+        android:layout_width="208dp"
+        android:layout_height="50dp"
+        android:backgroundTint="#2FAD40"
+        android:fontFamily="@font/chewy"
+        android:text="Registrate"
+        android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.418"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.303"
-        app:srcCompat="@drawable/logosolo" />
-
+        app:layout_constraintVertical_bias="0.773" />
 </androidx.constraintlayout.widget.ConstraintLayout>
