--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -2,12 +2,13 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/id_Correo"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/login" >
+    android:background="@drawable/login">
 
     <Button
-        android:id="@+id/btn_registro"
+        android:id="@+id/btn_entrar"
         android:layout_width="208dp"
         android:layout_height="50dp"
         android:backgroundTint="#2FAD40"
@@ -22,7 +23,7 @@
         app:layout_constraintVertical_bias="0.668" />
 
     <Button
-        android:id="@+id/btn_registro"
+        android:id="@+id/btn_regristrar"
         android:layout_width="208dp"
         android:layout_height="50dp"
         android:backgroundTint="#2FAD40"
@@ -35,4 +36,33 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.773" />
+
+    <EditText
+        android:id="@+id/id_email"
+        android:layout_width="256dp"
+        android:layout_height="47dp"
+        android:ems="10"
+        android:inputType="text"
+        android:text="Correo Electronico"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.438"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.434" />
+
+    <EditText
+        android:id="@+id/id_password"
+        android:layout_width="256dp"
+        android:layout_height="47dp"
+        android:ems="10"
+        android:inputType="text"
+        android:text="Contraseña"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.438"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.546" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
