--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -43,7 +43,7 @@
         android:layout_height="47dp"
         android:ems="10"
         android:inputType="text"
-        android:text="Correo Electronico"
+        android:hint="Correo Electronico"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.438"
@@ -57,7 +57,7 @@
         android:layout_height="47dp"
         android:ems="10"
         android:inputType="text"
-        android:text="Contraseña"
+        android:hint="Contraseña"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.438"
